# heath-economics-rust-crate

./: CITATION.cff  Cargo.toml  README.md
examples/: business_case.rs  engineering_economics.rs  qaly_to_decision.rs  screening_and_diagnostics.rs  uncertainty_and_information.rs  unit_economics.rs
src/: activation_and_uptake.rs  adherence_and_persistence.rs  ai_developer_productivity.rs  ai_quality_metrics.rs  ai_regulatory_evaluation.rs  ai_return_on_investment.rs  analysis_perspective.rs  avoidable_outsourcing_costs.rs  avoided_downstream_costs.rs  bed_days_saved.rs  benefits_realization.rs  budget_impact_analysis.rs  build_vs_buy.rs  cash_releasing_vs_non_cash_releasing.rs  clinical_ai_evaluation.rs  cloud_unit_economics.rs  cost_benefit_analysis.rs  cost_consequence_analysis.rs  cost_effectiveness_analysis.rs  cost_minimization_analysis.rs  cost_of_delay.rs  cost_utility_analysis.rs  did_not_attend_rate.rs  diga_fast_track.rs  digital_endpoints_and_biomarkers.rs  disability_adjusted_life_year.rs  discounting_and_time_preference.rs  dominance_and_efficiency_frontier.rs  dora_metrics.rs  downstream_resource_optimization.rs  earlier_intervention.rs  emergency_attendance_avoidance.rs  engagement_metrics.rs  eq_5d.rs  expected_value_of_perfect_information.rs  flow_metrics.rs  gds_service_metrics.rs  hard_cash_releasing_savings_deficit_defense.rs  health_adjusted_life_expectancy.rs  health_app_unit_economics.rs  (+38 more)
tests/: comprehensive_group1.rs  comprehensive_group2.rs  comprehensive_group3.rs  comprehensive_group4.rs  comprehensive_group5.rs  comprehensive_group6.rs  (+2 more)
(+5 files in other folders)
