[package]
name = "health-economics"
version = "0.1.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "Health economics models, structs, calculations, and examples."
readme = "README.md"
repository = "https://github.com/joelparkerhenderson/health-economics-rust-crate/"
license = "MIT OR Apache-2.0 OR BSD-3-Clause OR GPL-2.0-only OR GPL-3.0-only"
keywords = ["health", "economics", "statistics", "analytics", "medical"]
categories = ["science", "data-structures", "finance"]
include = ["src/**/*", "docs/tutorials/**/*", "LICENSE.md", "README.md", "llms.txt", "llms.json"]

[dependencies]
